# ojk-checker

./: .env.example  .gitignore  AGENTS.md  Makefile  captcha_corrector.py  correct_tesseract.py  install.sh  pyproject.toml  scheduler.out  slik  solve.py
data/captcha_samples/: captcha_20260509_233143_701026.meta.txt
slik_checker/: __init__.py  captcha.py  cli.py  config.py  exceptions.py  logging_config.py  models.py  notifier.py  orchestrator.py  parser.py  scheduler.py  scraper.py
slik_checker/ui/: app.py  daftar.py  dashboard.py  history.py  schedules.py  settings.py
tests/: __init__.py  conftest.py  test_captcha.py  test_models.py  test_notifier.py  test_parser.py  test_scraper.py
